<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="35dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/description"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="-10dp"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/description" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_camera_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#EEE"
                android:textSize="22sp" />

        </LinearLayout>

        <Switch
            android:id="@+id/setting_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="15dp"
            android:paddingTop="19dp"
            android:paddingEnd="8dp"
            android:paddingBottom="1dp"
            android:text="@string/launch_camera_on_start"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:thumb="@drawable/circle"
            android:track="@drawable/track_selector" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#CCC" />

        <Switch
            android:id="@+id/open_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="15dp"
            android:paddingTop="19dp"
            android:paddingEnd="8dp"
            android:paddingBottom="1dp"
            android:text="@string/open_link_on_scan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:thumb="@drawable/circle"
            android:track="@drawable/track_selector" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#CCC" />

        <Switch
            android:id="@+id/setting_noti_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:paddingStart="15dp"
            android:paddingTop="19dp"
            android:paddingEnd="8dp"
            android:paddingBottom="1dp"
            android:text="@string/receive_notifications"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:thumb="@drawable/circle"
            android:track="@drawable/track_selector" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#CCC" />

        <TextView
            android:id="@+id/setting_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/person"
            android:paddingStart="15dp"
            android:paddingTop="25dp"
            android:paddingEnd="15dp"
            android:text="@string/developers"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#CCC" />

        <TextView
            android:id="@+id/setting_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/share"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#CCC" />

        <TextView
            android:id="@+id/setting_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/rate"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/rate_us"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#CCC" />

        <TextView
            android:id="@+id/setting_suggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/suggestion"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/suggestions"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#CCC" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>