<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/drawer"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_settings_black_24dp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/bannerIdTrial" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/bannerIdTrial"
        tools:ignore="DuplicateIds" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/bannerIdTrial"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/launchCam"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_toolbar"
        android:drawableStart="@drawable/focus"
        android:gravity="center"
        android:paddingStart="20dp"
        android:text="@string/launch_camera"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />


</LinearLayout>